[workspace]

members = [
    "echoxy-dns",
    "echoxy-proxy",
]

resolver = "2"

[workspace.dependencies]
tokio = "1.34.0"
async-trait = "0.1.74"
hickory-server = "0.24.0"

clap = "4.4.10"
serde = "1.0.193"
serde_with = "1.6.1"
serde_json = "1.0.108"
tracing = "0.1"
tracing-subscriber = "0.3"

hpke-rs = "0.2.0"
hpke-rs-crypto = "0.2.0"
hpke-rs-rust-crypto = "0.2.0"

pkcs8 = "0.10.2"
num_enum = "0.7.1"
