[package]
name = "echoxy-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["net", "rt"] }
async-trait = { workspace = true }
hickory-server = { workspace = true, features = ["dns-over-https-rustls"] }

clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
